0.04
 - Add Image::Keyboard::Layout class.
 - Fix LICENSE file.
 - Improve example in Image::Keyboard doc.
 - Move code for imagemap() to Image::Keyboard::ImageMap::Tags.
 - Move code for check 'files_dir' parameter to image() method.
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Update Module::Install to 1.19 version.
 - Update author github username.

0.03 2013-08-27
 - Add LICENSE.
 - Add REPOSITORY section to doc.
 - Add align for text in button.
 - Add new combining characters.
 - Add padding for text in button.
 - Fix config() method and setting.
 - Fix char position in button.
 - Fix dependencies.
 - Fix test dependencies.
 - Improve doc.
 - Improve functionality with 'files_dir' parameter to situation with
   global files directory and situation with absolute paths.
 - Remove white space from code.
 - Rename CHANGES to Changes.
 - Rewrite buttons adding to buttons() method.
 - Rewrite buttons() method to numerically sorted list.

0.02 2013-02-21
 - Add MANIFEST file.

0.01 2013-02-21
 - First version.