@@ -512,7 +512,7 @@ L<https://github.com/michal-josef-spacek/Image-Keyboard>
 
 =head1 AUTHOR
 
-Michal Špaček L<mailto:skim@cpan.org>
+Michal Josef Špaček L<mailto:skim@cpan.org>
 
 L<http://skim.cz>
 
