@@ -5,7 +5,7 @@ use inc::Module::Install;
 
 # Definition.
 abstract 'Perl class for image keyboard creating.';
-author 'Michal Spacek <skim@cpan.org>';
+author 'Michal Josef Spacek <skim@cpan.org>';
 license 'bsd';
 name 'Image-Keyboard';
 requires 'Class::Utils' => 0.03;
